# Movie_Data_Capture

./: ADC_function.py  Movie_Data_Capture.py  README.md  config.py  core.py  number_parser.py  pyproject.toml  scraper.py  xlog.py
scrapinglib/: api.py  fanza.py  httprequest.py  javbus.py  javdb.py  javmenu.py  msin.py  parser.py  pcolle.py  storyline.py  utils.py
