[project]
name = "movie-data-capture"
version = "0.1.0"
description = "a local movie organizer"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "certifi>=2025.1.31",
    "click>=8.1.8",
    "cloudscraper>=1.2.71",
    "dlib-bin>=19.24.6",
    "face-recognition-models>=0.3.0",
    "lxml>=5.3.1",
    "mechanicalsoup>=1.3.0",
    "numpy>=2.0.2",
    "opencc-python-reimplemented>=0.1.7",
    "pillow==10.0.1",
    "pysocks==1.7.1",
    "requests>=2.32.3",
    "urllib3==1.26.18",
]

[dependency-groups]
dev = []
