[project]
name = "movie-data-capture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "certifi>=2026.1.4",
    "click>=8.3.1",
    "cloudscraper>=1.2.71",
    "dlib-bin>=20.0.0",
    "face-recognition-models>=0.3.0",
    "lxml>=6.0.2",
    "mechanicalsoup>=1.3.0",
    "numpy>=2.2.6",
    "opencc-python-reimplemented>=0.1.7",
    "pillow==10.0.1",
    "pysocks==1.7.1",
    "requests>=2.32.5",
    "urllib3==1.26.18",
]
